Integrate gulp-scss

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,6 +3,7 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		title Hello jade
+		link(rel="stylesheet", href="./css/all.css")
 	body
 		// using uncompelete tag must use |
 		//- this line won't convert to html comment
