Demo to use plumber to prevent pipe breaking caused by errors form gulp plugins

--- a/src/index.jade
+++ b/src/index.jade
@@ -8,4 +8,4 @@ html(lang="en")
 		// using uncompelete tag must use |
 		//- this line won't convert to html comment
 		br
-		| Lorem ipsum dolor.
+		 Lorem ipsum dolor.
