Integrate gulp-babel: convert ES6 to ES5

--- a/src/index.jade
+++ b/src/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
 		meta(charset="UTF-8")
 		title Hello jade
 		link(rel="stylesheet", href="./css/all.css")
+		script(src="./js/all.js")
 	body
 		// using uncompelete tag must use |
 		//- this line won't convert to html comment
