--- a/src/static/index.jade
+++ b/src/static/index.jade
@@ -4,14 +4,14 @@ html(lang="en")
 		meta(charset="UTF-8")
 		title Hello jade
 		<!-- build:css -->
-		link(rel="stylesheet", href="./css/a.css")
-		link(rel="stylesheet", href="./css/b.css")
-		link(rel="stylesheet", href="./css/c.css")
+		link(rel="stylesheet", href="../css/a.css")
+		link(rel="stylesheet", href="../css/b.css")
+		link(rel="stylesheet", href="../css/c.css")
 		<!-- endbuild -->
 		<!-- build:js -->
-		script(src="./js/a.js")
-		script(src="./js/b.js")
-		script(src="./js/c.js")
+		script(src="../js/a.js")
+		script(src="../js/b.js")
+		script(src="../js/c.js")
 		<!-- endbuild -->
 	body
 		// using uncompelete tag must use |
