--- a/src/index.jade
+++ b/src/index.jade
@@ -8,9 +8,12 @@ html(lang="en")
 		link(rel="stylesheet", href="./css/b.css")
 		link(rel="stylesheet", href="./css/c.css")
 		<!-- endbuild -->
+		<!-- build:vendors -->
+		script(src="./js/vendors.js")
+		<!-- endbuild -->
 		<!-- build:js -->
-		script(src="./js/a.js")
-		script(src="./js/b.js")
+		script(src="./js/all.js")
+		script(src="./js/all2.js")
 		script(src="./js/c.js")
 		<!-- endbuild -->
 	body
@@ -18,3 +21,5 @@ html(lang="en")
 		//- this line won't convert to html comment
 		br
 		| Lorem ipsum dolor.a
+
+		div(id="app"){{message}}
